Don't call deprecated methods